Kaiken pitäisi nyt toimia.
Jippii.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Lineaarialgebran hyödyntäminen CSS-kielessä</title>
     <link href="https://fonts.googleapis.com/css?family=Alegreya|Source+Code+Pro" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script type="text/javascript" src="hyphenator.js"></script>
     <script type="text/javascript" src="linearscripts.js"></script>
 </head>
@@ -31,7 +30,7 @@
         <div id="nappula">Tökkää tätä nappulaa, niin jänniä alkaa tapahtua.</div>
     </main>
     <footer>
-        (C) 2016 <a href="http://settheoreticalpineapple.github.io/">Joni Puljujärvi</a>
+        &copy; 2016 <a href="http://settheoreticalpineapple.github.io/">Joni Puljujärvi</a>
     </footer>
 </body>
 </html>
